--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@
 # sdk.dir = usr/lib/android-sdk/
 android.enableJetifier=true
 android.useAndroidX=true
-android.enableAapt2=false
+# android.enableAapt2=false
